update filter logic

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -9,225 +9,225 @@
 @import "./toggle/bootstrap-toogle.min.css";
 
 /* customize bootstrap stuff in /bootstrap/scss/_custom.scss */
-
-* {
+.md-theme-default, html {
+  * {
     -webkit-font-smoothing: antialiased;
     text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     hyphens: auto;
-}
+  }
 
-a {
+  a {
     text-decoration: none;
     &:hover {
-        text-decoration: none;
+      text-decoration: none;
     }
-}
+  }
 
-a[data-toggle="collapse"],
-a[data-toggle="collapse"]:hover,
-a[data-toggle="collapse"]:active,
-a[data-toggle="collapse"]:focus{
+  a[data-toggle="collapse"],
+  a[data-toggle="collapse"]:hover,
+  a[data-toggle="collapse"]:active,
+  a[data-toggle="collapse"]:focus{
     color: inherit;
     text-decoration:none !important;
-}
+  }
 
-p.small {
-	line-height: 18px;
-	font-size: 12px;
-}
+  p.small {
+    line-height: 18px;
+    font-size: 12px;
+  }
 
-.no-padding {
-	padding: 0px !important;
-}
+  .no-padding {
+    padding: 0px !important;
+  }
 
-.pull-right {
-	float:right;
-}
+  .pull-right {
+    float:right;
+  }
 
-.text-center {
-	text-align:center;
-}
+  .text-center {
+    text-align:center;
+  }
 
-label {
-	font-weight: bold;
-}
+  label {
+    font-weight: bold;
+  }
 
-.pagination-wrapper {
-	text-align: center;
-	width: 100%;
-}
+  .pagination-wrapper {
+    text-align: center;
+    width: 100%;
+  }
 
-label,
-.noselect{
+  label,
+  .noselect{
     user-select: none;
-}
+  }
 
-.intro-trigger {
-	display: none;
-}
+  .intro-trigger {
+    display: none;
+  }
 
-.hidden{
-	display: none;
-}
-.show{
-	display: initial;
-}
+  .hidden{
+    display: none;
+  }
+  .show{
+    display: initial;
+  }
 
-.btn-loading {
-	font-size: 0px !important;
-	transition: width 0.3s;
+  .btn-loading {
+    font-size: 0px !important;
+    transition: width 0.3s;
 
-	&:before {
-		content: "\f1ce";
-		-webkit-animation: fa-spin 2s infinite linear;
-		animation: fa-spin 2s infinite linear;
-		font-family: "FontAwesome";
-		display: inline-block;
-		width: 20px;
-		height: 20px;
-		font-size: 16px;
-	}
-}
+    &:before {
+      content: "\f1ce";
+      -webkit-animation: fa-spin 2s infinite linear;
+      animation: fa-spin 2s infinite linear;
+      font-family: "FontAwesome";
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      font-size: 16px;
+    }
+  }
 
-footer.small-footer {
-	width: 100%;
-	margin-top: 40px;
-	position: inherit;
-	@media screen and (max-height: 700px) { top: 510px; }
-	bottom: 0;
-	right: 0;
-	left: 0;
-	clear: both;
-	padding: 30px 0px;
-	font-size: 0.9em;
-	margin-bottom: 5px;
-	@include media-breakpoint-down(xs) {
-		background: $colorBeige;
+  footer.small-footer {
+    width: 100%;
+    margin-top: 40px;
+    position: inherit;
+    @media screen and (max-height: 700px) { top: 510px; }
+    bottom: 0;
+    right: 0;
+    left: 0;
+    clear: both;
+    padding: 30px 0px;
+    font-size: 0.9em;
+    margin-bottom: 5px;
+    @include media-breakpoint-down(xs) {
+      background: $colorBeige;
 
-		img {
-			clear: both;
-			display: block;
-			margin: 0 auto 10px;
-		}
-	}
+      img {
+        clear: both;
+        display: block;
+        margin: 0 auto 10px;
+      }
+    }
 
-	.imprint {
-		.center {
-			text-align: center;
-			align-items: center;
-		}
-        img{
-            width: auto;
-            max-width: 175px;
-            height: auto;
-            max-height: 44px; 	
-        }
-	}
-}
+    .imprint {
+      .center {
+        text-align: center;
+        align-items: center;
+      }
+      img{
+        width: auto;
+        max-width: 175px;
+        height: auto;
+        max-height: 44px;
+      }
+    }
+  }
 
-@keyframes fa-spin {
-	0% {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg);
-	}
-	100% {
-		-webkit-transform: rotate(359deg);
-		transform: rotate(359deg);
-	}
-}
+  @keyframes fa-spin {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(359deg);
+      transform: rotate(359deg);
+    }
+  }
 
 
-.notification.hidden {
-	display:none;
-}
+  .notification.hidden {
+    display:none;
+  }
 
-form.inline {
-	display: inline;
+  form.inline {
+    display: inline;
 
-	button:not(.no-inline-styling){
-		-webkit-appearance: none;
-		appearance: none;
-		background: transparent;
-		border: 0px;
-	}
-}
+    button:not(.no-inline-styling){
+      -webkit-appearance: none;
+      appearance: none;
+      background: transparent;
+      border: 0px;
+    }
+  }
 
-.margin-top {
-	margin-top: 30px;
-}
+  .margin-top {
+    margin-top: 30px;
+  }
 
-.padding-top {
-	padding-top: 30px;
-}
+  .padding-top {
+    padding-top: 30px;
+  }
 
-.btn-tertiary,
-.btn.btn-tertiary,
-.list-group-item.btn-tertiary {
-	background-color: $colorGrey;
-}
+  .btn-tertiary,
+  .btn.btn-tertiary,
+  .list-group-item.btn-tertiary {
+    background-color: $colorGrey;
+  }
 
-.btn-thin {
-	padding-left: 15px !important;
-	padding-right: 15px !important;
-}
+  .btn-thin {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+  }
 
-.alert-fixed {
-  position:fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index:9999;
-  border-radius:0
-}
+  .alert-fixed {
+    position:fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index:9999;
+    border-radius:0
+  }
 
-.dropdown-item {
-	cursor: pointer;
-}
+  .dropdown-item {
+    cursor: pointer;
+  }
 
-.collapse-icon {
-	display:inline-block;
+  .collapse-icon {
+    display:inline-block;
     vertical-align: baseline;
     text-align: center;
     width: 1em;
-}
+  }
 
-.window-inline .hide-inline {
-	display: none;
-}
+  .window-inline .hide-inline {
+    display: none;
+  }
 
-.card-deck-row {
+  .card-deck-row {
 
-	& > div {
-		margin-bottom: 30px;
-	}
+    & > div {
+      margin-bottom: 30px;
+    }
 
-	.card {
-		max-width: 100% !important;
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: column;
+    .card {
+      max-width: 100% !important;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
 
-		.card-block {
-			max-width: 100%;
-			width: 100%;
-			flex: 1 1 0;
-		}
+      .card-block {
+        max-width: 100%;
+        width: 100%;
+        flex: 1 1 0;
+      }
 
-		.card-footer {
-			align-self: flex-end;
-			flex: 0 1 0;
-			width: 100%;
-		}
-	}
-}
+      .card-footer {
+        align-self: flex-end;
+        flex: 0 1 0;
+        width: 100%;
+      }
+    }
+  }
 
-.print-only{display:none;}
-@media print {
+  .print-only{display:none;}
+  @media print {
     .print-only{display:initial;}
-}
+  }
 
-.ckcontent {
+  .ckcontent {
     margin: 10px 0;
     color: #373a3c;
     text-decoration:none;
@@ -244,9 +244,10 @@ form.inline {
       border-left: 2px solid grey;
       padding-left: 5px;
     }
-}
+  }
 
-.container .jumbotron{
-	padding: 2rem 2rem;
-	margin: 2rem 0rem;
+  .container .jumbotron{
+    padding: 2rem 2rem;
+    margin: 2rem 0rem;
+  }
 }
