"made with love in Potsdam" added to footer
with heart emoji

--- a/views/lib/footer.hbs
+++ b/views/lib/footer.hbs
@@ -19,6 +19,9 @@
                 <span> - </span>
                 <a href="/partner">Partner</a>
             </div>
+            <div>
+                <p>Made with<span style="color:#b10438">❤</span>in Potsdam</p>
+            </div>
         </div>
     </div>
 </footer>
