--- a/views/firstLogin/firstLoginUE18.hbs
+++ b/views/firstLogin/firstLoginUE18.hbs
@@ -15,7 +15,7 @@
         <h4>Herzlich Willkommen in der Schul-Cloud, {{currentUser.firstName}} {{currentUser.lastName}}</h4>
         <p>Wir freuen uns, dass du die Schul-Cloud nutzen möchtest.</p>
         <p>Bitte ändere im nächsten Schritt dein Startpasswort, damit du mit der Benutzung der Schul-Cloud starten kannst.</p>
-        <p>Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der Schul-Cloud die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ????🦄</p>
+        <p>Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir in der Schul-Cloud die männliche Form (z.B. „Schüler“, „Lehrer“). Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🌈🎉🦄</p>
       </section>
 
       <section data-panel="section-2" class="submit-page">
