--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -21,7 +21,12 @@
                 </ul>
             </div>
             <div  class="col-md-4">        
-                <h4></h4>
+                <h4>Mobile App</h4>
+                <div style="margin-left:-13px">
+                    <a href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+                        <img alt='Jetzt bei Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png' height="91"/>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
