--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -8,7 +8,7 @@
         <div class="row">
             {{#each currentteam.team}}
             {{#if subheader_before}}<h6>{{subheader_before}}</h6>{{/if}}
-            <div id="modal-container-{{id}}">
+            <div id="modal-container-personcard">
                 <div class="modal-background {{#if ../../loggedin}}modal-padding{{/if}}">
                     <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                         <div class="modal-dialog" style="margin-top: {{#if longDesc}} {{ longDesc }} {{else}} 20vh {{/if}}" role="document">
@@ -44,7 +44,7 @@
                 col-sm-6 col-xs-12">
                 <div class="person-wrapper">
                     <div class="buttons">
-                        <div id="two" class="button{{id}}">
+                        <div id="openCard">
                             <div class="card h-100 person">
                                 <img class="card-img-top circular" src="{{pictureUrl}}">
                                 <div class="card-block">
