--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -50,7 +50,7 @@
     left: 0;
     transform: scale(0);
     z-index: 1;
-    &.two {
+    &.show {
       transform: scale(1);
       .modal-background {
         background: 0 0;
