fix bug with InputField (for IPad)
- add hyphens:none in CSS-File (for moz, webkit, ms)
- shorten Input Field Placeholder

--- a/static/styles/lib/bootstrap/scss/_forms.scss
+++ b/static/styles/lib/bootstrap/scss/_forms.scss
@@ -171,6 +171,10 @@ select.form-control-sm {
   padding: $input-padding-y-lg $input-padding-x-lg;
   font-size: $font-size-lg;
   @include border-radius($input-border-radius-lg);
+  -moz-hyphens: none; 
+  -ms-hyphens: none; 
+  -webkit-hyphens: none;
+  hyphens: none;
 }
 
 select.form-control-lg {
