--- a/views/authentication/forms/login.hbs
+++ b/views/authentication/forms/login.hbs
@@ -6,7 +6,7 @@
 
             <form method="post" action="/login/" class="login-form">
                 <div class="form-group">
-                    <input type="text" name="username" class="form-control form-control-lg" placeholder="Email-Adresse oder Nutzername" required>
+                    <input type="text" name="username" class="form-control form-control-lg" placeholder="E-Mail / Nutzername" required>
                     <input type="password" name="password" class="form-control form-control-lg" placeholder="Passwort" required>
                 </div>
 
