moving style to base.scss

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -116,6 +116,10 @@ footer.small-footer {
 		.center {
 			text-align: center;
 			align-items: center;
+
+			.heart-color {
+				color: #b10438;
+			}
 		}
         img{
             width: auto;
