--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -4,9 +4,9 @@
             <div  class="col-md-4">        
                 <h4>Kontakt</h4>
                 <ul>
-                    <li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target:"_blank">info@schul-cloud.org</a></li>
-                    <li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target:"_blank">inhalte@schul-cloud.org</a></li>
-                    <li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target:"_blank">datenschutz@schul-cloud.org</a></li>
+                    <li>Allgemeine Anfragen: <a href="mailto:info@schul-cloud.org" target="_blank">info@schul-cloud.org</a></li>
+                    <li>Inhalteanbieter: <a href="mailto:inhalte@schul-cloud.org" target="_blank">inhalte@schul-cloud.org</a></li>
+                    <li>Datenschutz: <a href="mailto:datenschutz@schul-cloud.org" target="_blank">datenschutz@schul-cloud.org</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
@@ -20,9 +20,9 @@
                     <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
                 </ul>
             </div>
-            <div  class="col-md-4">        
+            <div class="col-md-4">
                 <h4>Mobile App</h4>
-                <div style="margin-left:-14px">
+                <div class="android-app">
                     <a href='https://play.google.com/store/apps/details?id=org.schulcloud.mobile&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
                         <img alt='Jetzt bei Google Play' src='https://play.google.com/intl/en_us/badges/images/generic/de_badge_web_generic.png' height="70"/>
                     </a>
