--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -92,10 +92,10 @@ label,
 
 footer {
 	.android-app {
-		margin-left:-10px;
+		margin-left:-11px;
 	}
 
-	small-footer {
+	&.small-footer {
 		width: 100%;
 		margin-top: 40px;
 		position: inherit;
