--- a/views/firstLogin/firstLoginU14.hbs
+++ b/views/firstLogin/firstLoginU14.hbs
@@ -25,7 +25,7 @@
         <div class="row">
           <div class="form-group col-md-6 col-sm-12">
               <label>E-Mail:</label>
-              <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
+              <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" value="{{currentUser.email}}" required>
           </div>
         </div>
       </section>
