--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -33,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            <label>E-Mail Adresse des Schülers *</label>
+            <label>E-Mail Adresse des Schülers: * <small>(Schüler benötigen eine eigene E-Mail Adresse)</small></label>
             <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required />
             <!-- with mail pattern: <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" data-pattern="*@test.de" pattern=".+@test.de" required />-->
             <span class="mailinfo"></span>
@@ -43,7 +43,7 @@
         </p>
         <div class="row">
           <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
-            <Label>Geschlecht *</Label>
+            <Label>Geschlecht: *</Label>
             <select class="form-control form-control-lg" type="text" name="gender">
               <option value="noinfo" selected>keine Angabe</option>
               <option value="male">männlich</option>
@@ -76,7 +76,7 @@
         </div>
 
         <div class="form-group">
-            <label>Ihre E-Mail Adresse *</label>
+            <label>Ihre E-Mail Adresse * <small>(Darf nicht gleich der E-Mail Adresse Ihres Kindes sein)</small></label>
             <input class="form-control" type="email" name="parent-email" required placeholder="eltern@schul-cloud.org"></input>
         </div>
         <p>Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der Schul-Cloud rechtlich gültig ist. Die Schul-Cloud gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.</p>
