add titles for some buttons or a-tags with class=btn

--- a/views/courses/courseGroup.hbs
+++ b/views/courses/courseGroup.hbs
@@ -32,7 +32,7 @@
         <!-- Themen -->
         <div class="row section-course-group">
             <div class="col-sm-12 col-md-12">
-                <a href="/courses/{{courseId}}/topics/add?courseGroup={{_id}}" class="btn btn-secondary btn-sm pull-right ml-1" data-toggle="tooltip"
+                <a href="/courses/{{courseId}}/topics/add?courseGroup={{_id}}" class="btn btn-secondary btn-sm pull-right ml-1"
                     title="Thema hinzufügen">
                     <i class="fa fa-plus" aria-hidden="true"></i>
                     <span class="hidden-lg-down">Thema hinzufügen</span>
