--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -97,14 +97,14 @@
                     <ul class="nav navbar-nav float-xs-none dropdowns" data-step="1" data-intro="Hier finden Sie übergreifende Informationen">
                         <li class="nav-item fullscreen-action" data-step="2" data-intro="Blendet Menus aus">
                             <div class="dropdown minimal-button">
-                                <a class="btn btn-secondary btn-thin dropdown-toggle btn-fullscreen" data-toggle="dropdown">
+                                <a class="btn btn-secondary btn-thin dropdown-toggle btn-fullscreen" title="Fullscreen" data-toggle="dropdown">
                                     <i class="fa fa-expand"></i>
                                 </a>
                             </div>
                         </li>
                         <li class="nav-item qr-code-action" data-step="3" data-intro="Ganz einfach QR-Codes erstellen!">
                             <div class="dropdown minimal-button">
-                                <a class="btn btn-secondary btn-thin dropdown-toggle btn-create-qr" data-toggle="dropdown">
+                                <a class="btn btn-secondary btn-thin dropdown-toggle btn-create-qr" title="QR-Code" data-toggle="dropdown">
                                     <i class="fa fa-qrcode"></i>
                                 </a>
                                 <div class="dropdown-menu print">
@@ -118,7 +118,7 @@
                         <li class="nav-item notification-dropdown" data-step="4" data-intro="Hier erhalten sie Benachrichtigungen">
                             <div class="dropdown minimal-button">
                                 <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
-                                        recentNotifications}}recent{{/if}}" data-toggle="dropdown">
+                                        recentNotifications}}recent{{/if}}" title="Benachrichtigungen" data-toggle="dropdown">
                                     <i class="fa fa-bell"></i> {{#if recentNotifications}}
                                     <span class="tag tag-primary">{{recentNotifications}}</span>{{/if}}
                                 </a>
@@ -147,7 +147,7 @@
 
                         <li class="nav-item help-drodown" data-step="5" data-intro="Hilfebereich für Ihre Fragen und Probleme">
                             <div class="dropdown minimal-button">
-                                <a class="btn btn-secondary btn-thin dropdown-toggle" data-toggle="dropdown">
+                                <a class="btn btn-secondary btn-thin dropdown-toggle" title="Hilfe" data-toggle="dropdown">
                                     <i class="fa fa-question"></i>
                                 </a>
                                 <div class="dropdown-menu">
