--- a/views/registration/registration.hbs
+++ b/views/registration/registration.hbs
@@ -11,7 +11,7 @@
     <div id="welcome-screen">
       <p>Willkommen zur Anmeldung in der HPI Schul-Cloud!</p>
       <p>Je nach Alter des Schülers* verändert sich der Anmeldeprozess. Bei Schülern unter 18 muss ein Erziehungsberechtigter die nächsten Schritte durchführen, bei volljährigen Schülern er selbst.</p>
-      <p>Bitte wählen sie das Alter des Schülers:</p>
+      <p>Bitte wähle das Alter des Schülers:</p>
       <div class="form-group">
           <fieldset>
               <input type="radio" id="reg-u18" name="student-age" value="u18"><label for="reg-u18">&nbsp;&nbsp;unter 18 Jahre</label><br>
