--- a/views/registration/registration-parent.hbs
+++ b/views/registration/registration-parent.hbs
@@ -124,12 +124,13 @@
       <section data-panel="section-4" class="submit-page" data-feature="pin">
         <h4>Abschluss</h4>
         <p>Fast geschafft!</p>
-        <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen. Sie haben keine E-Mail erhalten? <button type="button" class="btn-link" id="resend-pin">Code erneut senden</button></p>
+        <p>Wir haben soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen. Sie haben keine E-Mail erhalten? <button type="button" class="btn-link" id="resend-pin">Code erneut senden</button></p>
         <div id="pinverification">
             <div id="temp-pin" class="hidden"></div>
             {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="email-pin" class="mail-validation my-1"}}{{/embed}}
         </div>
         <input type="hidden" name="initial-password" class="student-password-input" />
+        <input type="hidden" name="pin-sent" value="no" />
       </section>
 
 
