add margin to buttons and minor text changes

--- a/views/firstLogin/firstLoginExistingUserU14.hbs
+++ b/views/firstLogin/firstLoginExistingUserU14.hbs
@@ -25,7 +25,7 @@
           <section data-panel="section-2">
               <h4>Danke!</h4>
               <p>Du kannst jetzt mit der Benutzung der HPI Schul-Cloud fortfahren.<br>
-                  <a class="btn btn-primary" href="//schul-cloud.org">Schul-Cloud erkunden</a>
+                  <a class="btn btn-primary mt-2" href="//schul-cloud.org">Schul-Cloud erkunden</a>
               </p>
           </section>
       {{/content}}
