--- a/views/firstLogin/firstLoginU14.hbs
+++ b/views/firstLogin/firstLoginU14.hbs
@@ -63,7 +63,7 @@
       <section data-panel="section-4">
         <h4>Fertig!</h4>
         <p>Du kannst jetzt mit der Benutzung der HPI Schul-Cloud starten.</p>
-        <a class="btn btn-primary" href="//schul-cloud.org">Schul-Cloud erkunden</a>
+        <a class="btn btn-primary mt-2" href="//schul-cloud.org">Schul-Cloud erkunden</a>
       </section>
       {{/content}}
     {{/embed}}
