--- a/views/files/files-overview.hbs
+++ b/views/files/files-overview.hbs
@@ -15,7 +15,7 @@
                 <div class="sc-card-wrapper col-md-6 col-sm-6 col-xs-12">
                     {{> 'lib/components/sc-card' 
                         title='<i class="fa fa-user"></i> Meine persönlichen Dateien'
-                        secondaryTitle="&nbsp;"
+                        secondaryTitle="<br />"
                         url='/files/my/'
                         link-text='Dateien öffnen'
                         content='Hier findest du alle deine persönlichen Dateien. Auf diese Dateien hast nur du Zugriff, du kannst sie aber auch mit anderen Nutzern teilen.'
@@ -25,7 +25,7 @@
                 <div class="sc-card-wrapper col-md-6 col-sm-6 col-xs-12">
                     {{> 'lib/components/sc-card' 
                         title='<i class="fa fa-graduation-cap"></i> Meine Kurs-Dateien'
-                        secondaryTitle="&nbsp;"
+                        secondaryTitle="<br />"
                         url='/files/courses/'
                         link-text='Dateien öffnen'
                         content='Hier findest du alle Dateien, die in den jeweiligen Kursen im Unterricht verwendet werden. Alle Teilnehmer des Kurses, also der Lehrer und die Schüler, haben auf diese Dateien Zugriff.'
@@ -35,7 +35,7 @@
                 <div class="sc-card-wrapper col-md-6 col-sm-6 col-xs-12">
                     {{> 'lib/components/sc-card' 
                         title='<i class="fa fa-share-alt"></i> Mit mir geteilte Dateien'
-                        secondaryTitle="&nbsp;"
+                        secondaryTitle="<br />"
                         url='/files/shared/'
                         link-text='Dateien öffnen'
                         content='Hier findest du alle mit dir geteilten Dateien. Dies sind Dateien die von anderen Nutzern zur Verfügung gestellt worden sind.'
