--- a/views/administration/forms/form-classes-edit.hbs
+++ b/views/administration/forms/form-classes-edit.hbs
@@ -57,15 +57,15 @@
             <input class="form-control linked" name="classsuffix" type="text" placeholder="a, b, c, ..., I, II, III, ..., etc." value="{{class.classsuffix}}" {{#if isCustom}}disabled{{/if}}/>
         </div>
     </div>
-    <p>Deine Schule passt nicht ins klassische Schema? <a href="#" class="createcustom">Mehr Optionen</a>.</p>
+    <p>Deine Klasse passt nicht ins klassische Schema? <a href="#" class="createcustom">Mehr Optionen</a>.</p>
     <section id="createcustom" class="{{#unless isCustom}}hidden{{/unless}}">
-        <p>Du kannst Jahrgangsunabhängige Klassen mit freier Bezeichnung erstellen. Diese Klassen können nicht vom Administrator <i>"versetzt"</i> werden, sondern müssen manuell aktualisiert werden.</p>
+        <p>Du kannst jahrgangsunabhängige Klassen mit freier Bezeichnung erstellen. Diese Klassen können nicht vom Administrator <i>"versetzt"</i> werden, sondern müssen manuell aktualisiert werden.</p>
         <div class="form-group">
             <label>Klassenbezeichnung</label>
             <input class="form-control linked" name="classcustom" type="text" placeholder="z.B. Froschklasse 3-4" required value="{{class.customName}}" {{#unless isCustom}}disabled{{/unless}}/>
         </div>
         <label>
-            <input name="keepyear" type="checkbox" value="true" {{#if class.keepYear}}checked{{/if}} {{#unless isCustom}}disabled{{/unless}}/>
+            <input name="keepyear" type="checkbox" value="true" {{#if edit}}{{#if class.keepYear}}checked{{/if}}{{else}}checked{{/if}} {{#unless isCustom}}disabled{{/unless}}/>
             <span>Schuljahreszuordnung beibehalten</span>
         </label>  
     </section>
