--- a/views/firstLogin/firstLogin14_17.hbs
+++ b/views/firstLogin/firstLogin14_17.hbs
@@ -1,4 +1,4 @@
-{{#extend "lib/loggedin"}}
+{{#extend "lib/simple"}}
   {{#content "scripts" mode="append"}}
       <script src="/scripts/dataprivacy/dataprivacy.js" type="text/javascript" defer></script>
       <script src="/scripts/pwrecovery.js" type="text/javascript" defer></script>
