--- a/views/lib/extended_footer.hbs
+++ b/views/lib/extended_footer.hbs
@@ -13,10 +13,10 @@
                 <h4>Links</h4>
                 <ul>
                     <li><a href="/impressum" target="blank">Impressum</a></li>
-                    <li><a href="/impressum#data_security">Datenschutzerklärung</a></li>
-                    <li><a href="/team">Team</a></li>
-                    <li><a href="/partner">Partner</a></li>
-                    <li><a href="/about">Über das Projekt</a></li>
+                    <li><a href="/impressum#data_security" target="blank">Datenschutzerklärung</a></li>
+                    <li><a href="/team" target="blank">Team</a></li>
+                    <li><a href="/partner" target="blank">Partner</a></li>
+                    <li><a href="/about" target="blank">Über das Projekt</a></li>
                     <li><a href="https://github.com/schul-cloud/" target="_blank">GitHub</a></li>
                 </ul>
             </div>
