minor ui improvements

--- a/static/styles/administration/progress.scss
+++ b/static/styles/administration/progress.scss
@@ -103,7 +103,10 @@
   padding: 1em 0 0;
 }
 
-.btn-secondary{
+#prevSection{
+  &[disabled]{
+    display: none;
+  }
   border:none;
   color: #222;
 }
