--- a/views/registration/pin.hbs
+++ b/views/registration/pin.hbs
@@ -1,5 +1,5 @@
 <div class="pin-input {{class}}">
-  <input class="combined" type="text" name="{{name}}" pattern="{{pattern}}{ {{~digits~}} }" {{#if required}}required{{/if}}/>
+  <input class="combined" type="text" name="{{name}}" pattern="{{pattern}}{ {{~digits~}} }" {{#if required}}required{{/if}} tabIndex="-1"/>
   {{#times digits}}
     <input class="digit" type="text" pattern="{{../pattern~}} {1}" maxlength="1" placeholder="·" {{#if ../required}}required{{/if}}>
   {{/times}}
